src/controllers/user/snapshots/crates_io__controllers__user__email_verification__tests__happy_path-2.snap
---
source: src/controllers/user/email_verification.rs
expression: app.emails_snapshot().await
snapshot_kind: text
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Please confirm your email address
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: 7bit

Hello foo! Welcome to crates.io. Please click the
link below to verify your email address. Thank you!

https://crates.io/confirm/[confirm-token]
